# platanus-hack-26-mx-team-2

./: .gitignore  00 - Documento Maestro - Sandbox-Proxy.md  01 - Documento Maestro - Lazarus.md  AGENTS.md  README.md  platanus-hack-project.jsonc  project-description.md  pyproject.toml  skills-lock.json
I-1/: .env.example  README.md
demo/: .env.example  README.md  pyproject.toml
demo/docs/: CAMEL-VS-IKARUS.md  COMO-PROBAR.md  DOCUMENTO-MAESTRO.md  ESTADO-IKARUS.md
demo/docs/superpowers/plans/: 2026-06-21-ikarus-demo-proof.md  2026-06-21-ikarus-web-ui.md
demo/ikarus/: __init__.py  cli.py  composition.py  config.py  interpreter.py  naive_agent.py  policy.py  q_llm.py  scenarios.py  schemas.py  tui.py  uploads.py
demo/ikarus/tools/: email_sink.py
demo/ikarus/web/: __main__.py  live_flow.py  server.py
demo/ikarus/web/static/: flow.js  style.css
demo/ikarus/web/templates/: _chat.html  _flow_error.html  _flow_extract.html  _flow_live.html  _flow_step.html  _scenes.html  _send_result.html  index.html
demo/tests/: conftest.py  test_app.py  test_config.py  test_interpreter.py  test_live_flow.py  test_models.py  test_naive_agent.py  test_p_llm.py  test_scenarios.py  test_sources.py  test_uploads.py  test_web_server.py
docs/: COMO-PROBAR.md  ESTADO-IKARUS.md  HONESTY.md
ikarus/: .dockerignore  Dockerfile.server  Dockerfile.web  __init__.py  cli.py  config.py  dev.sh  docker-compose.yml  interpreter.py  labels.py  llm_client.py  naive_agent.py  nginx.conf  p_llm.py  q_llm.py  scenarios.py  tui.py
iteration-01/: 01 - Documento Maestro - Lazarus.md  PLAN.md
(+131 files in other folders)
