[project]
name = "ikarus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.0", "pydantic>=2", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]

[tool.pytest.ini_options]
pythonpath = ["."]
